# check-deprule

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.claude/: CLAUDE.md
.claude/rules/: ci.md  code-style.md  workflow.md
.claude/skills/rust-check/: SKILL.md
.github/workflows/: ci-check-test.yaml  publish.yaml  version-upgrade.yaml
docs/: README_en.md
src/: lib.rs  main.rs
src/dependency_graph/: mod.rs  tree.rs  violation.rs
src/dependency_graph/formatter/: mod.rs  parse.rs
src/dependency_rule/: mod.rs  rules_parser.rs
src/metadata/: mod.rs
tests/demo_crates/clean-arch/: Cargo.toml  dependency_rules.toml
tests/demo_crates/clean-arch/ca-core/: Cargo.toml
tests/demo_crates/clean-arch/database/: Cargo.toml
tests/demo_crates/clean-arch/handler/: Cargo.toml
tests/demo_crates/clean-arch/interactor/: Cargo.toml
tests/demo_crates/clean-arch/repositry/: Cargo.toml
tests/demo_crates/tangled-clean-arch/: Cargo.toml  dependency_rules.toml
tests/demo_crates/tangled-clean-arch/ca-core/: Cargo.toml
tests/demo_crates/tangled-clean-arch/database/: Cargo.toml
tests/demo_crates/tangled-clean-arch/handler/: Cargo.toml
tests/demo_crates/tangled-clean-arch/interactor/: Cargo.toml
tests/demo_crates/tangled-clean-arch/repositry/: Cargo.toml
tests/init_crate/: Cargo.toml
tests/simple_crate/: Cargo.toml
tests/test_files/: parse_rules_test.toml
