[package]
name = "check-deprule"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
cargo_metadata = "0.19.2"
clap = { version = "4.5.31", features = ["derive"] }
petgraph = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
tracing = "0.1.41"
