[package]
name = "check-deprule"
version = "0.0.3"
edition = "2024"
authors = ["chatblanc-ciel <73688885+chatblanc-ciel@users.noreply.github.com>"]
description = "linter for dependency constraints in Cargo.toml"
keywords = ["cargo", "linter", "dependency", "cli"]
license = "MIT OR Apache-2.0"

# TODO: write later
readme = "README.md"
# repository = ""
# homepage = ""
# documentation = ""


[dependencies]
anyhow = "1.0.97"
cargo = "0.87.1"
cargo_metadata = {version = "0.19.2", features = ["builder"]}
clap = { version = "4.5.35", features = ["derive"] }
colored = "3.0.0"
petgraph = "0.8.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
tracing = "0.1.41"

[dev-dependencies]
string-auto-indent = "0.1.2"
