[package]
name = "check-deprule"
version = "0.0.4"
edition = "2024"
rust-version = "1.85.0"
authors = ["chatblanc-ciel <73688885+chatblanc-ciel@users.noreply.github.com>"]
description = "A linter that enforces inter-crate dependency constraints in Cargo workspaces"
keywords = ["cargo", "linter", "dependency", "cli", "workspace"]
categories = ["development-tools", "command-line-utilities"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/chatblanc-ciel/check-deprule"
homepage = "https://github.com/chatblanc-ciel/check-deprule"
documentation = "https://docs.rs/check-deprule"
exclude = [".github/", ".claude/", "tests/demo_crates/*/target/", "Makefile.toml", "docs/"]

[dependencies]
anyhow = "1.0.97"
cargo_metadata = {version = "0.19.2", features = ["builder"]}
clap = { version = "4.5.35", features = ["derive"] }
colored = "3.0.0"
petgraph = "0.8.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
string-auto-indent = "0.1.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }

[badges]
maintenance = { status = "actively-developed" }
