[package]
name = "tangled-ca-interactor"
version = "0.1.0"
edition = "2024"

[dependencies]
tangled-ca-core = { version = "0.1.0", path = "../ca-core" }
tangled-ca-database = { version = "0.1.0", path = "../database" }
tangled-ca-handler = { version = "0.1.0", path = "../handler" }
tangled-ca-repositry = { version = "0.1.0", path = "../repositry" }
